Fix Vercel deployment: add webpack aliases, tsconfig paths, and vercel.json config for shared-auth module resolution

--- a/apps/frontend/b2c/tsconfig.json
+++ b/apps/frontend/b2c/tsconfig.json
@@ -4,8 +4,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@packages/shared-auth": ["../../../packages/shared-auth/src"],
       "@packages/shared-frontend": ["../../../packages/shared-frontend/src"],
       "@packages/shared-utils": ["../../../packages/shared-utils/src"],
+      "@packages/shared-schemas": ["../../../packages/shared-schemas/src"],
       "@packages/shared-config": ["../../../packages/shared-config"]
     },
     "allowJs": true,
