--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "typescript-eslint": "^8.46.4"
   },
   "engines": {
-    "node": ">=22.12.0",
+    "node": "~22.12.0",
     "npm": ">=10.9.0"
   }
 }
