--- a/packages/shared-frontend/package.json
+++ b/packages/shared-frontend/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Shared configurations for the FlyBeth monorepo",
   "type": "module",
-  "main": "index.js",
-  "types": "types.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./types.d.ts",
-      "default": "./index.js"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     },
     "./css/*": "./css/*",
     "./vite/*": "./vite/*",
@@ -42,9 +42,5 @@
     "test",
     "*.d.ts",
     "**/*.d.ts"
-  ],
-  "engines": {
-    "node": ">=22.12.0",
-    "npm": ">=10.9.0"
-  }
+  ]
 }
