--- a/apps/frontend/b2c/vercel.json
+++ b/apps/frontend/b2c/vercel.json
@@ -2,6 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "npm install --legacy-peer-deps",
-  "nodeVersion": "22.x"
+  "installCommand": "npm install --legacy-peer-deps"
 }
