Fix Vercel deployment: add webpack aliases, tsconfig paths, and vercel.json config for shared-auth module resolution

--- a/apps/frontend/b2c/vercel.json
+++ b/apps/frontend/b2c/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "cd ../../../ && npm run build --workspace=apps/frontend/b2c",
+  "installCommand": "cd ../../../ && npm install",
   "outputDirectory": ".next",
-  "framework": "nextjs",
-  "installCommand": "npm install --legacy-peer-deps"
+  "framework": "nextjs"
 }
