--- a/apps/frontend/b2b/package.json
+++ b/apps/frontend/b2b/package.json
@@ -16,34 +16,7 @@
     "@packages/shared-frontend": "file:../../../packages/shared-frontend",
     "@packages/shared-config": "file:../../../packages/shared-config",
     "@packages/shared-utils": "file:../../../packages/shared-utils",
-    "@packages/shared-schemas": "file:../../../packages/shared-schemas",
-    "@hookform/resolvers": "^3.3.2",
-    "lucide-react": "^0.294.0",
-    "next": "^15.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.66.0",
-    "tailwind-merge": "^2.0.0",
-    "zustand": "^4.5.5"
+    "@packages/shared-schemas": "file:../../../packages/shared-schemas"
   },
-  "devDependencies": {
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "@vitest/coverage-v8": "^1.6.1",
-    "@vitest/ui": "^1.0.4",
-    "autoprefixer": "^10.4.16",
-    "eslint-config-next": "^14.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "jsdom": "^23.0.1",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.3.0",
-    "vite": "^5.4.10",
-    "vitest": "^1.0.4"
-  }
+  "devDependencies": {}
 }
