--- a/apps/frontend/b2c/tsconfig.json
+++ b/apps/frontend/b2c/tsconfig.json
@@ -17,7 +17,9 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "types": ["node"],
+    "skipLibCheck": true
   },
   "include": ["src", "app", ".next/types/**/*.ts"]
 }
